[package]
name = "ladybug_core"
version = "0.1.0"
edition = "2021"
description = "Rust core for Ladybug DB (lbug crate, Arrow IPC); native only, no N-API"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
# Node/filesystem persistence via std::fs
std = []

[dependencies]
lbug = { version = "0.14", features = ["arrow"] }
arrow = { version = "55", default-features = false }
arrow-ipc = { version = "55", default-features = false }
